--- a/index.html
+++ b/index.html
@@ -125,10 +125,24 @@
     
 <h3>Talks in Fall 2022 </h3>
 
-            <p>Dec 12, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
+            <p>Dec 12, '19 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
+                <b>Yichen Tong</b> (Kyoto University), 
+                <a onclick="toggle_visibility('8');">
+                    <i>Rational Self-closeness Numbers of Mapping Spaces</i></a><br />
+                <div id="8" class="toshow" style="display:none">
+                    For a closed simply-connected 2n-dimensional manifold M, it has been proved that the components 
+                    of the free mapping space from M to 2n-sphere have exactly two different rational homotopy types. 
+                    However, since this result is proved by algebraic models of components, we do not know whether other homotopy 
+                    invariants distinguish these two types or not. In this talk, we completely determine the self-closeness 
+                    numbers of rationalized components of the mapping space and prove that they do distinguish different 
+                    rational homotopy types. The methods also have potential to be extended on other mapping spaces.
+                </div>
+            </p>
+        
+            <p>Dec 12, '12 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
                 <b><a href="http://jckx.bisu.edu.cn/art/2019/9/29/art_16003_231195.html" target="_blank">Xueqi Wang</a></b> (Beijing International Studies University), 
                 <a onclick="toggle_visibility('7');">
-                    <i>On the classification of certain 1-connected 7-manifolds</i></a><br />
+                    <i>On the Classification of Certain 1-connected 7-manifolds</i></a><br />
                 <div id="7" class="toshow" style="display:none">
                     The classification of manifolds is a basic and important problem intopology. In this talk, 
                     I will focus on 1-connected 7-manifolds with specialhomology groups or cohomology rings 
