--- a/grad/index.html
+++ b/grad/index.html
@@ -208,7 +208,7 @@
    <a onclick="toggle_visibility('10');">
                     <i>An Introduction to Structured Ring Spectra</i></a><br />
                 <div id="10" class="toshow" style="display:none">
-                    In this talk, I will introduce how Peter May developed the theory of $E_\infty$-ring spectra, especially the construction of the twisted half-smashed product. From this viewpoint, we will see how linear isometry operads parametrize internal smash products from external smash products. If time permits, I will give a gentle introduction to the EKMM framework of spectra.
+                    In this talk, I will introduce how Peter May developed the theory of E-infinity-ring spectra, especially the construction of the twisted half-smashed product. From this viewpoint, we will see how linear isometry operads parametrize internal smash products from external smash products. If time permits, I will give a gentle introduction to the EKMM framework of spectra.
                 </div>
     </p>
 
