--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -237,7 +237,7 @@
 
     <p>Nov 3, '22,
         <b>Antong Zhu</b>,
-        <i>Hecke operators; theta functions</i>
+         <a href="22fal/notes%20on%20hecke%20operator%20Antong%20Zhu.pdf" target="_blank"><i>Hecke operators; theta functions</i></a>
     </p>
 
      <p>Nov 17, '22,
@@ -248,13 +248,35 @@
      <p>Nov 24, '22,
         <b>Hongxiang Zhao</b>,
         <a onclick="toggle_visibility('4');">          
-                    <i>Introduction to elliptic curves, j-function, complex multiplication, and class field theory</i></a><br />
+                    <i>Introduction to elliptic curves, j-function, complex multiplication, and modular curves</i></a><br />
         <div id="4" class="toshow" style="display:none">
             <li> David A. Cox, Primes of the form <i>x</i><sup>2</sup> + <i>ny</i><sup>2</sup></li>
                     <li> Joseph H. Silverman, The arithmetic of elliptic curves, Chapter III</li>
                     <li><a href="22fal/A%20Brief%20Introduction%20to%20Elliptic%20Curves%20and%20Modular%20Curves%20Hongxiang%20Zhao.pdf" target="_blank">Notes </a></li>
             </div>
-    </p>
+     </p>
+
+     <p>Dec 1, '22,
+        <b>Hongxiang Zhao</b>,
+        <i>Introduction to elliptic curves, j-function, complex multiplication, and modular curves (cont'd) </i>
+     </p>
+
+
+     <p>Dec 8, '22,
+        <b>Zeyang Ding</b>,
+        <a href="22fal/A_Brief_Introduction_to_Eisenstein_Series_and_Dif.pdf" target="_blank"><i>Introduction to Eisenstein Series and Differential Operators on Modular Forms </i></a>
+        
+     </p>
+
+     <p>Dec 15, '22,
+        <b>Zeyang Ding</b>,
+        <i>Introduction to Eisenstein Series and Differential Operators on Modular Forms (cont'd) </i>
+        
+     </p>
+
+
+
+
 
 <br /><br /><br />
 <p></p>
