--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -252,7 +252,7 @@
         <div id="4" class="toshow" style="display:none">
             <li> David A. Cox, Primes of the form <i>x</i><sup>2</sup> + <i>ny</i><sup>2</sup></li>
                     <li> Joseph H. Silverman, The arithmetic of elliptic curves, Chapter III</li>
-                    <li><a href="22fal/A%20Brief%20Introduction%20to%20Elliptic%20Curves%20and%20Modular%20Curves%20Hongxiang%20Zhao.pdf" target="_blank">Notes </a></li>
+                    <li><a href="22fal/A%20Brief%20Introduction%20to%20Elliptic%20Curves%20and%20Modular%20Curves%20by%20Hongxiang%20Zhao(full%20edition).pdf" target="_blank">Notes </a></li>
             </div>
      </p>
 
