--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -193,16 +193,17 @@
     <p>Sep 15, '22, 
         <b>Rongming Yin</b>, 
         <a onclick="toggle_visibility('2');">
-                    <i>Introduction to p-adic fields and the Hasse principle</i></a><br />
+                    <i>Introduction to p-adic fields and the Classification of quadratic forms over the rationals</i></a><br />
         <div id="2" class="toshow" style="display:none">
                     <li>Keith Conrad, <a href="https://kconrad.math.uconn.edu/blurbs/gradnumthy/selmerexample.pdf" target="_blank">Selmer's example</a></li>
                     <li>J. W. S. Cassels, <a href="https://doi.org/10.1112/jlms/s1-41.1.193" target="_blank">Diophantine equations with special reference to elliptic curves</a></li>
+                    <li><a href="22fal/Classification%20of%20quadratic%20forms%20over%20Q.pdf" target="_blank">Notes </a></li>
         </div>
     </p>
 
     <p>Sep 22, '22, 
         <b>Rongming Yin</b>, 
-                    <i>Introduction to p-adic fields and the Hasse principle, cont'd</i></a><br />        
+                    <i>Introduction to p-adic fields and the Classification of quadratic forms over the rationals, cont'd</i></a><br />        
     </p>
 
     <p>Sep 29, '22,
