--- a/grad/index.html
+++ b/grad/index.html
@@ -213,7 +213,8 @@
     </p>
 
          <p>Jan 5, '23, 
-        <b>Yingxin Li</b>, <i>Obstruction theory and tmf</i>
+         <b>Yingxin Li</b>, 
+        <a href="22fal/TMF.pdf" target="_blank"><i>Elliptic homology theory and tmf</i></a>
     </p>
         
 <h3><a id="22sum"></a>Talks in Summer 2022</h3>
