--- a/past/index.html
+++ b/past/index.html
@@ -23,7 +23,7 @@
     ================================================== -->
     <script src="/js/modernizr.js"></script>
     <script src="/js/pace.min.js"></script>
-    <script type="/text/javascript">
+<script type="text/javascript">
 <!--
     function toggle_visibility(id) {
        var e = document.getElementById(id);
@@ -34,6 +34,7 @@
     }
 //-->
 </script>
+
 
 
 <body id="top">
