--- a/undergrad/22fal/index.html
+++ b/undergrad/22fal/index.html
@@ -184,7 +184,7 @@
         <a onclick="toggle_visibility('1');">
                     <i>Introduction to modular forms; finite fields and the quadratic reciprocity law</i></a><br />
         <div id="1" class="toshow" style="display:none">
-                    <li><a href="Number theory and modular forms 2022.9.8 Kaicheng Dong.pdf" target="_blank">Notes</a></li>
+                    <li><a href="20220908-Dong.pdf" target="_blank">Notes</a></li>
                     <li>Felix Klein, <a href="https://sustc.primo.exlibrisgroup.com.cn/permalink/86SUSTC_INST/tcg6ar/alma991001304719704181" target="_blank">Development of mathematics in the 19th century</a></li>
                     <li>冯克勤，代数数论简史</li>
         </div>
@@ -197,7 +197,7 @@
         <div id="2" class="toshow" style="display:none">
                     <li>Keith Conrad, <a href="https://kconrad.math.uconn.edu/blurbs/gradnumthy/selmerexample.pdf" target="_blank">Selmer's example</a></li>
                     <li>J. W. S. Cassels, <a href="https://doi.org/10.1112/jlms/s1-41.1.193" target="_blank">Diophantine equations with special reference to elliptic curves</a></li>
-                    <li><a href="Classification%20of%20quadratic%20forms%20over%20Q.pdf" target="_blank">Notes </a></li>
+                    <li><a href="20220915-Yin.pdf" target="_blank">Notes </a></li>
         </div>
     </p>
 
@@ -216,19 +216,19 @@
          <a onclick="toggle_visibility('3');">          
                     <i>Introduction to Dirichlet L-functions, cont'd & Dirichlet theorem</i></a><br />
          <div id="3" class="toshow" style="display:none">
-                    <li><a href="10.6%20notes%20Yining.pdf" target="_blank">Notes </a></li>
+                    <li><a href="20221006-Han.pdf" target="_blank">Notes </a></li>
                     <li> Kenneth Ireland & Michael Rosen, A classical introduction to modern number theory，chapter 15 & chapter 16</li>
         </div>
     </p>
 
     <p>Oct 13, '22, 
        <b>Ziyin Hu</b>, 
-       <a href="lecture_about_modular_forms%20Ziyin%20Hu.pdf" target="_blank"><i>The modular group; modular functions</i></a>
+       <a href="20221013-Hu.pdf" target="_blank"><i>The modular group; modular functions</i></a>
     </p>
 
     <p>Oct 20, '22,
        <b>Qiyuan Song</b>,
-       <a href="note1%20Qiyuan%20Song.pdf" target="_blank"><i>The space of modular forms; expansions at infinity</i></a>
+       <a href="20221020-Song.pdf" target="_blank"><i>The space of modular forms; expansions at infinity</i></a>
     </p>
 
     <p>Oct 27, '22,
@@ -238,7 +238,7 @@
 
     <p>Nov 3, '22,
         <b>Antong Zhu</b>,
-         <a href="notes%20on%20hecke%20operator%20Antong%20Zhu.pdf" target="_blank"><i>Hecke operators; theta functions</i></a>
+         <a href="20221103-Zhu.pdf" target="_blank"><i>Hecke operators; theta functions</i></a>
     </p>
 
      <p>Nov 17, '22,
@@ -253,7 +253,7 @@
         <div id="4" class="toshow" style="display:none">
             <li> David A. Cox, Primes of the form <i>x</i><sup>2</sup> + <i>ny</i><sup>2</sup></li>
                     <li> Joseph H. Silverman, The arithmetic of elliptic curves, Chapter III</li>
-                    <li><a href="A%20Brief%20Introduction%20to%20Elliptic%20Curves%20and%20Modular%20Curves%20by%20Hongxiang%20Zhao(full%20edition).pdf" target="_blank">Notes </a></li>
+                    <li><a href="20221124-Zhao.pdf" target="_blank">Notes </a></li>
             </div>
      </p>
 
@@ -265,7 +265,7 @@
 
      <p>Dec 8, '22,
         <b>Zeyang Ding</b>,
-        <a href="A_Brief_Introduction_to_Eisenstein_Series_and_Dif.pdf" target="_blank"><i>Introduction to Eisenstein Series and Differential Operators on Modular Forms </i></a>
+        <a href="20221208-Ding.pdf" target="_blank"><i>Introduction to Eisenstein Series and Differential Operators on Modular Forms </i></a>
         
      </p>
 
