--- a/undergrad/22fal/index.html
+++ b/undergrad/22fal/index.html
@@ -67,8 +67,8 @@
                         <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
                         <li><a href="/acts" title="" target="_blank">Appl. Comput. Topol. Seminar</a></li>
     <li><a href="https://sustech-topology.github.io/acts/#22spr" title="" target="_blank">Spring 2022</a></li>
-    <li><a href="21fal" title="" target="_blank">Fall 2021</a></li>
-    <li><a href="21spr" title="" target="_blank">Spring 2021</a></li>
+    <li><a href="/21fal" title="" target="_blank">Fall 2021</a></li>
+    <li><a href="/21spr" title="" target="_blank">Spring 2021</a></li>
     
                     </ul> 
                     <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
