--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -131,7 +131,7 @@
     <p>This is an undergraduate student seminar on geometry and topology.  
        This semester, our main theme will be knot theory and its interaction with other objects and tools in low-dimensional topology.  
        We meet every Thursday 4:20–6:10 in M5024.  
-       <a href="23spr/syllabus.pdf" target="_blank">Here is a syllabus</a>.  
+       <a href="23spr/syllabus.pdf" target="_blank">Here</a> is a syllabus.  
        Schedule, references, etc. will be updated 
        <a href="https://dark-increase-93e.notion.site/Knot-Theory-and-Low-Dimensional-Topology-2023-Spring-e950e35c261043a5a005a2c83c64be98" 
           target="_blank">here</a>.
