--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -62,7 +62,8 @@
 
                     <ul class="header__nav">
                         <li><a href="/index.html" target="_blank">Home</a></li>
-                         <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
+                         <li><a href="#P">Previous Semesters</a></li>
+                        <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
                         <li><a href="/acts" title="" target="_blank">Appl. Comput. Topol. Seminar</a></li>
     
                     </ul> 
@@ -131,7 +132,7 @@
           target="_blank">here</a>.
    </p>
     
-<h3>Previous semesters</h3>
+<h3><a id="P"></a>Previous Semesters</h3>
     <li><a href="22fal" target="_blank">Fall 2022</a>, Modular forms and their applications to geometry and topology</li>
     <li><a href="/acts/#22spr" target="_blank">Spring 2022</a>, Topological data analysis</li>
     <li><a href="21fal" target="_blank">Fall 2021</a>, Differential forms in algebraic topology</li>
