--- a/grad/index.html
+++ b/grad/index.html
@@ -87,6 +87,7 @@
                         <li><a  href="/index.html" title="" target="_blank">Home</a></li>
                         <li><a href="/acts" title="" target="_blank">Appl. Comput. Topol. Seminar</a></li>
                         <li><a href="/undergrad" title="" target="_blank">Undergraduate Seminar</a></li>
+                        <li><a href="#22fal">Fall 2022</a></li>
                         <li><a href="#22sum">Summer 2022</a></li>
                         <li><a href="#21spr">Spring 2021</a></li>
                         
@@ -165,7 +166,7 @@
         <i>TBA</i></a>
     </p>
     
-<h3>Talks in Fall 2022 (Tuesdays 4:20–5:20 / 4:20–6:10 in M5024)</h3>
+<h3><a id="22fal"></a>Talks in Fall 2022 (Tuesdays 4:20–5:20 / 4:20–6:10 in M5024)</h3>
 
     <p>Sep 20, '22, 
         <b>Jiacheng Liang</b>, 
@@ -360,7 +361,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
             <div class="row">
                 <div class="col-full">
                     <div class="s-footer__copyright">
-                        <span>© Copyright Philosophy 2022</span> 
+                        <span>© Copyright Philosophy 2023</span> 
                         <span>Site Template by <a href="https://colorlib.com/">Colorlib</a></span>
                         <span>Picture "Invisible Cities (Hopf Fibration)" (2006) by <a href="https://www.londontsai.com/">London Tsai</a></span>
                     </div>
