--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -157,7 +157,7 @@
                     <div class="s-footer__copyright">
                         <span>© Copyright Philosophy 2023</span> 
                         <span>Site Template by <a href="https://colorlib.com/" target="_blank">Colorlib</a></span>
-                        
+                        <span>Cover picture from Actualized.org</span>
                     </div>
 
                     <div class="go-top">
