--- a/grad/index.html
+++ b/grad/index.html
@@ -165,6 +165,12 @@
     </p>
 
     <p>
+        Apr 11, '23, 
+        <b>Zhonglin Wu</b>, 
+        <i>More on Adams spectral sequences</i></a>
+    </p>
+
+    <p>
         Apr 18, '23, 
         <b>Xuecai Ma</b>, 
         <i>TBA</i></a>
