--- a/past/index.html
+++ b/past/index.html
@@ -63,9 +63,8 @@
 
                     <ul class="header__nav">
                         <li><a href="/" target="_blank">Home</a></li>
-                    <!--
+                        <li><a href="#22fal">Fall 2022</a></li>
                         <li><a href="#21fal">Fall 2021</a></li>
-                    -->
     
                     </ul> 
                     <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
