--- a/grad/index.html
+++ b/grad/index.html
@@ -380,7 +380,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                     <div class="s-footer__copyright">
                         <span>© Copyright Philosophy 2023</span> 
                         <span>Site Template by <a href="https://colorlib.com/" target="_blank">Colorlib</a></span>
-                        <span>Picture "Invisible Cities (Hopf Fibration)" (2006) by <a href="https://www.londontsai.com/" target="_blank">London Tsai</a></span>
+                        <span>Cover Photo by Yifei Zhu</span>
                     </div>
 
                     <div class="go-top">
