--- a/grad/index.html
+++ b/grad/index.html
@@ -37,7 +37,7 @@
     
      <!-- Katex
     ================================================== -->
-<!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.css" integrity="sha384-Um5gpz1odJg5Z4HAmzPtgZKdTBHZdw8S29IecapCSB31ligYPhHQZMIlWLYQGVoc" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.css" integrity="sha384-Um5gpz1odJg5Z4HAmzPtgZKdTBHZdw8S29IecapCSB31ligYPhHQZMIlWLYQGVoc" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.js" integrity="sha384-YNHdsYkH6gMx9y3mRkmcJ2mFUjTd0qNQQvY9VYZgQd7DcN7env35GzlmFaZ23JGp" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/contrib/auto-render.min.js" integrity="sha384-vZTG03m+2yp6N6BNi5iM4rW4oIwk5DfcNdFfxkk9ZWpDriOkXX8voJBFrAO7MpVl" crossorigin="anonymous"></script>
 <script>
@@ -56,8 +56,6 @@
         });
     });
 </script>    
-
- -->
 
 <body id="top">
 
@@ -173,13 +171,19 @@
     <p>
         Apr 18, '23, 
         <b>Xuecai Ma</b>, 
-        <i>TBA</i></a>
+        <a href="23spr/0418-Ma.pdf" target="_blank"><i>Formal moduli problems</i></a>
     </p>
 
     <p>
         Apr 25, '23, 
         <b>Yuanding Li</b>, 
-        <i>TBA</i></a>
+        <i>$v_n$-periodic homotopy theory</i>
+    </p>
+
+    <p>
+        May 9, '23, 
+        <b>TBA</b>, 
+        <i>TBA</i>
     </p>
 
 
