--- a/grad/index.html
+++ b/grad/index.html
@@ -165,7 +165,7 @@
     <p>
         Apr 11, '23, 
         <b>Zhonglin Wu</b>, 
-        <i>Multiplicative structures in Adams spectral sequences</i></a>
+        <i>Multiplicative structures in the Adams spectral sequence</i></a>
     </p>
 
     <p>
