--- a/grad/index.html
+++ b/grad/index.html
@@ -183,7 +183,7 @@
     <p>
         May 9, '23, 
         <b>Yunhao Sun</b>, 
-        <i>TBA</i>
+        <i>An overview of motivic homotopy theory</i>
     </p>
 
 
