--- a/grad/index.html
+++ b/grad/index.html
@@ -159,7 +159,7 @@
     <p>
         Mar 7, '23, 
         <b>Yingxin Li</b>, 
-        <a href="23spr/0307-Li.pdf" target="_blank"><i>Goerss–Hopkins obstruction theory</i></a>
+        <a href="23spr/0307-Li.pdf" target="_blank"><i>The Goerss–Hopkins obstruction theory</i></a>
     </p>
 
     <p>
@@ -177,13 +177,31 @@
     <p>
         Apr 25, '23, 
         <b>Yuanding Li</b>, 
-        <i>$v_n$-periodic homotopy theory</i>
+        <i>An overview of $v_n$-periodic homotopy theory</i>
     </p>
 
     <p>
         May 9, '23, 
         <b>Yunhao Sun</b>, 
         <i>An overview of motivic homotopy theory</i>
+    </p>
+
+    <p>
+        May 16, '23, 
+        <b>Hongxiang Zhao</b>, 
+        <i>Explicit local class field theory à la Lubin and Tate with an application to algebraic topology</i>
+    </p>
+
+    <p>
+        May 23, '23, 
+        <b>Jiacheng Liang</b>, 
+        <i>(More on topological orientations and algebraic structures)</i>
+    </p>
+
+    <p>
+        May 30, '23, 
+        <b>Qingrui Qu</b>, 
+        <i>(Calculus of functors and chromatic homotopy theory)</i>
     </p>
 
 
