--- a/grad/index.html
+++ b/grad/index.html
@@ -193,9 +193,15 @@
     </p>
 
     <p>
+        May 27, '23, 
+        <b>Tongtong Liang (10–11, M4009)</b>, 
+        <i>Thesis defense: Methods of homotopy theory in algebraic geometry from the viewpoint of cohomology operations</i>
+    </p>
+
+    <p>
         May 23, '23, 
         <b>Jiacheng Liang</b>, 
-        <i>(More on topological orientations and algebraic structures)</i>
+        <i>(More on topological orientations from algebraic structures)</i>
     </p>
 
     <p>
