--- a/grad/index.html
+++ b/grad/index.html
@@ -193,8 +193,8 @@
     </p>
 
     <p>
-        May 27, '23, 
-        <b>Tongtong Liang (10–11, M4009)</b>, 
+        May 27, '23 (10–11, M4009), 
+        <b>Tongtong Liang</b>, 
         <i>Thesis defense: Methods of homotopy theory in algebraic geometry from the viewpoint of cohomology operations</i>
     </p>
 
