--- a/acts/index.html
+++ b/acts/index.html
@@ -126,7 +126,7 @@
 <h3><a id="A"></a>About</h3>
             
     <p>
-        This semester, the seminar takes on a smaller, concentrated scale as we discuss and write up 
+        This semester, the seminar has taken on a smaller, concentrated scale as we discuss and write up 
         our case study in classifying phonetic data using topological methods in time series analysis.  
         By default, we meet <b>Mondays at 2 pm in M5024</b>.
     </p>
