--- a/acts/index.html
+++ b/acts/index.html
@@ -137,7 +137,7 @@
     <p>
         Apr 3, '23, 
         <b>Siheng Yi</b>, 
-        <a href="22–23/Yi-20230403.pdf" target="_blank"><i>Interleaving distances between persistence modules</i></a>
+        <a href="22-23/Yi-20230403.pdf" target="_blank"><i>Interleaving distances between persistence modules</i></a>
     </p>
 
     <p>
