--- a/grad/index.html
+++ b/grad/index.html
@@ -201,7 +201,7 @@
     <p>
         May 23, '23, 
         <b>Jiacheng Liang</b>, 
-        <a href="22fal/EC_JCL.pdf" target="_blank"><i>Thom spectra, infinite loop spaces, generalized cocycles, and the $\sigma$-orientation</i></a>
+        <a href="23spr/0523-Liang.pdf" target="_blank"><i>Thom spectra, infinite loop spaces, generalized cocycles, and the $\sigma$-orientation</i></a>
     </p>
 
     <p>
