--- a/grad/index.html
+++ b/grad/index.html
@@ -207,7 +207,7 @@
     <p>
         May 30, '23, 
         <b>Qingrui Qu</b>, 
-        <i>(Calculus of functors and chromatic homotopy theory)</i>
+        <a href="23spr/0530-Qu.pdf" target="_blank"><i>Functor calculus and chromatic homotopy theory</i></a>
     </p>
 
 
