--- a/grad/index.html
+++ b/grad/index.html
@@ -258,7 +258,7 @@
         
          <p>Dec 13, '22, 
         <b>Tongtong Liang</b>, 
-        <a href="22fal/OperadSlides.pdf" target="_blank"><i>Operads and the Recognization Principle</i></a>
+        <a href="22fal/OperadSlides.pdf" target="_blank"><i>Operads and the Recognition Principle</i></a>
     </p>
         
          <p>Dec 20, '22, 
