--- a/acts/index.html
+++ b/acts/index.html
@@ -146,6 +146,15 @@
         <i>Realizing topological convolutional neural networks for image data</i></a>
     </p>
 
+    <p>
+        Jul 18, '23 (Tuesday, 5–6 pm, M5024 and Tencent Meeting 291-909-800), 
+        <b>Meng Yu</b> (Tencent AI Lab), 
+        <a onclick="toggle_visibility('23-1');"><i>Speech signal processing in multi-speaker environments: problems, modelings, and assessment</i></a><br />
+        <div id="23-1" class="toshow" style="display:none">
+            Deep learning for speech enhancement has dramatically accelerated the process of the cocktail party problem, which is a major challenge yet to be solved for tracking, enhancing and recognizing each individual speaker when multiple speakers talk simultaneously in a noisy and reverberant environment. In this presentation, I will start from solutions to the keywords spotting problem in a multi-speaker environment. A hybrid of full-band and narrow-band modeling is then introduced to address speech enhancement problems including acoustic echo cancellation, noise suppression, dereverberation, and automatic gain control in both single-channel and multi-channel setups. MetricNet, a non-intrusive speech quality assessment model, is developed for speech enhancement evaluation in real scenarios.
+        </div>
+    </p>
+
 <br /><br /><br />
 <p></p>
 </article>
