--- a/grad/index.html
+++ b/grad/index.html
@@ -149,9 +149,25 @@
 
     <p>
         This is a graduate-level seminar on algebraic and geometric topology.  Topics are selected from common interests of the participants.  
-        <a href="http://dx.doi.org/10.1090/noti941" target="_blank">Here</a> are some general suggestions on how to give a good talk.  By default, we meet 
-        <b>Tuesdays 4:20 in M5024</b>.  
+        <a href="http://dx.doi.org/10.1090/noti941" target="_blank">Here</a> are some general suggestions on how to give a good talk.  
+<!--    By default, we meet <b>Tuesdays 4:20 in M5024</b>.  -->
     </p>
+
+
+<h3>Talks in Fall 2023</h3>
+
+<!--
+    <p>
+        MMM DD, '23, 
+        <b>Speaker</b>, 
+        <a onclick="toggle_visibility('23fal-1');"><i>Title</i></a><br />
+        <div id="23fal-1" class="toshow" style="display:none">
+            <li>Abstract</li>
+
+            <li><a href="23fal/MMDD-Surname.pdf" target="_blank">Notes/Slides</a></li>
+        </div>
+    </p>
+-->
 
 
 <h3>Talks in Spring 2023</h3>
