--- a/grad/index.html
+++ b/grad/index.html
@@ -85,6 +85,7 @@
                         <li><a  href="/index.html" title="" target="_blank">Home</a></li>
                         <li><a href="/acts" title="" target="_blank">Appl. Comput. Topol. Seminar</a></li>
                         <li><a href="/undergrad" title="" target="_blank">Undergraduate Seminar</a></li>
+                        <li><a href="#23spr">Spring 2023</a></li>
                         <li><a href="#22fal">Fall 2022</a></li>
                         <li><a href="#22sum">Summer 2022</a></li>
                         <li><a href="#21spr">Spring 2021</a></li>
@@ -170,7 +171,7 @@
 -->
 
 
-<h3>Talks in Spring 2023</h3>
+<h3><a id="23spr"></a>Talks in Spring 2023</h3>
 
     <p>
         Mar 7, '23, 
