--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -159,7 +159,7 @@
                     <div class="s-footer__copyright">
                         <span>© Copyright Philosophy 2023</span> 
                         <span>Site Template by <a href="https://colorlib.com/" target="_blank">Colorlib</a></span>
-                        <span>Cover Picture from Actualized.org</span>
+                        <span>Cover Picture from Christian Wuthrich's <a href="https://www.maths.nottingham.ac.uk/plp/pmzcw/#talks" target="_blank">webpage</a></span>
                     </div>
 
                     <div class="go-top">
