--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -125,7 +125,7 @@
 
     <p>
         This is an undergraduate student seminar on geometry and topology.  
-        This semester, our main theme will be modular curves, with Diamond and Shurman's <a href="https://doi.org/10.1007/978-0-387-27226-9" target="_blank">A first course in modular forms</a> as a main reference.  
+        This semester, our main theme will be modular curves, with Diamond and Shurman's <a href="https://doi.org/10.1007/978-0-387-27226-9" target="_blank">A first course in modular forms</a> (from Chapter 6 on) as a main reference.  
         More details are to be announced.  
     </p>
     
