--- a/index.html
+++ b/index.html
@@ -158,6 +158,24 @@
 -->
 
     <p>
+        Dec 21, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
+        <b>Ruochuan Liu</b> (Peking University), 
+        <a onclick="toggle_visibility('23-4');"><i>TBA</i></a><br />
+        <div id="23-4" class="toshow" style="display:none">
+            
+        </div>
+    </p>
+
+    <p>
+        Nov 9, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
+        <b>Zhouli Xu</b> (University of California San Diego), 
+        <a onclick="toggle_visibility('23-3');"><i>TBA</i></a><br />
+        <div id="23-3" class="toshow" style="display:none">
+            
+        </div>
+    </p>
+
+    <p>
         Sep 21, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
         <b>Guozhen Wang</b> (Fudan University), 
         <a onclick="toggle_visibility('23-2');"><i>Structures and computations in the motivic stable homotopy categories</i></a><br />
