--- a/index.html
+++ b/index.html
@@ -158,20 +158,38 @@
 -->
 
     <p>
-        Dec 21, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
-        <b>Ruochuan Liu</b> (Peking University), 
-        <a onclick="toggle_visibility('23-4');"><i>TBA</i></a><br />
-        <div id="23-4" class="toshow" style="display:none">
+        Nov 9, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
+        <b>Zhouli Xu</b> (University of California San Diego), 
+        <a onclick="toggle_visibility('23-6');"><i>TBA</i></a><br />
+        <div id="23-6" class="toshow" style="display:none">
             
         </div>
     </p>
 
     <p>
-        Nov 9, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
-        <b>Zhouli Xu</b> (University of California San Diego), 
-        <a onclick="toggle_visibility('23-3');"><i>TBA</i></a><br />
-        <div id="23-3" class="toshow" style="display:none">
+        Oct 19, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
+        <b>Ruochuan Liu</b> (Peking University), 
+        <a onclick="toggle_visibility('23-5');"><i>TBA</i></a><br />
+        <div id="23-5" class="toshow" style="display:none">
             
+        </div>
+    </p>
+
+    <p>
+        Sep 27, '23 (Wednesday, 4:20–5:10 pm, M5024), 
+        <b>Guozhen Wang</b> (Fudan University), 
+        <a onclick="toggle_visibility('23-4');"><i>Chromatic families in the EHP sequence, II</i></a><br />
+        <div id="23-4" class="toshow" style="display:none">
+            We will try to explain the patterns of chromatic families in the EHP sequence and the applications in unstable homotopy theory.  This is joint work with Y. Zhu.
+        </div>
+    </p>
+
+    <p>
+        Sep 25, '23 (Monday, 4:20–5:10 pm, M5024), 
+        <b>Guozhen Wang</b> (Fudan University), 
+        <a onclick="toggle_visibility('23-3');"><i>Chromatic families in the EHP sequence</i></a><br />
+        <div id="23-3" class="toshow" style="display:none">
+            We will try to explain the patterns of chromatic families in the EHP sequence and the applications in unstable homotopy theory.  This is joint work with Y. Zhu.
         </div>
     </p>
 
