--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -126,8 +126,9 @@
     <p>
         This is an undergraduate student seminar on geometry and topology.  
         This semester, our main theme will be modular curves, with Diamond and Shurman's <a href="https://doi.org/10.1007/978-0-387-27226-9" target="_blank">A first course in modular forms</a> (from Chapter 6 on) as a main reference.  
-        We meet on Thursdays 9–11 am.
-        More details are to be announced.  
+        Other useful resources include Milne's <a href="https://www.jmilne.org/math/CourseNotes/mf.html" target="_blank">notes</a> as well as a recent introductory, motivating 
+        <a href="https://www.quantamagazine.org/behold-modular-forms-the-fifth-fundamental-operation-of-math-20230921/" target="_blank">article</a> on modular forms by Cepelewicz of Quanta Magazine.
+        We meet on <b>Thursdays 9–11 am at M5024</b>.
     </p>
     
     <p>
