--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -127,7 +127,8 @@
         This is an undergraduate student seminar on geometry and topology.  
         This semester, our main theme will be modular curves, with Diamond and Shurman's <a href="https://doi.org/10.1007/978-0-387-27226-9" target="_blank">A first course in modular forms</a> (from Chapter 6 on) as a main reference.  
         Other useful resources include Milne's <a href="https://www.jmilne.org/math/CourseNotes/mf.html" target="_blank">notes</a> as well as a recent introductory, motivating 
-        <a href="https://www.quantamagazine.org/behold-modular-forms-the-fifth-fundamental-operation-of-math-20230921/" target="_blank">article</a> on modular forms by Cepelewicz of Quanta Magazine.
+        <a href="https://www.quantamagazine.org/behold-modular-forms-the-fifth-fundamental-operation-of-math-20230921/" target="_blank">article</a> on modular forms by Cepelewicz of Quanta Magazine.  
+        There will also be two <a href="https://math.sustech.edu.cn/colloquium.html?lang=en" target="_blank">colloquiums</a> in a row on the topic in October.
         We meet on <b>Thursdays 9–11 am at M5024</b>.
     </p>
     
