--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -129,7 +129,7 @@
         Other useful resources include Milne's <a href="https://www.jmilne.org/math/CourseNotes/mf.html" target="_blank">notes</a> as well as a recent introductory, motivating 
         <a href="https://www.quantamagazine.org/behold-modular-forms-the-fifth-fundamental-operation-of-math-20230921/" target="_blank">article</a> on modular forms by Cepelewicz of Quanta Magazine.  
         There will also be two <a href="https://math.sustech.edu.cn/colloquium.html?lang=en" target="_blank">colloquiums</a> in a row on the topic in October.
-        We meet on <b>Thursdays 9–11 am at M5024</b>.
+        We meet on <b>Thursdays 9–11 am in M5024</b>.
     </p>
     
     <p>
