--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -128,11 +128,12 @@
         This semester, our main theme will be modular curves, with Diamond and Shurman's <a href="https://doi.org/10.1007/978-0-387-27226-9" target="_blank">A first course in modular forms</a> (from Chapter 6 on) as a main reference.  
         Other useful resources include Milne's <a href="https://www.jmilne.org/math/CourseNotes/mf.html" target="_blank">notes</a> as well as a recent introductory, motivating 
         <a href="https://www.quantamagazine.org/behold-modular-forms-the-fifth-fundamental-operation-of-math-20230921/" target="_blank">article</a> on modular forms by Cepelewicz of Quanta Magazine.  
-        There will also be two <a href="https://math.sustech.edu.cn/colloquium.html?lang=en" target="_blank">colloquiums</a> in a row on the topic in October.
-        We meet on <b>Thursdays 9–11 am in M5024</b>.
+        There will also be two <a href="https://math.sustech.edu.cn/colloquium.html?lang=en" target="_blank">colloquiums</a> in a row on the topic in October.  
+        Still, Chao Li's recent <a href="https://www.ams.org/journals/bull/2023-60-03/S0273-0979-2023-01786-2/" target="_blank">survey</a> is recommended.  
     </p>
     
     <p>
+        We meet on <b>Thursdays 9–11 am in M5024</b>.  
         <a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description for those who wish to register for credit.  
     </p>
     
