--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -145,7 +145,7 @@
         <a onclick="toggle_visibility('1');">
                     <i>An overview of modular forms and modular curves</i></a><br />
         <div id="1" class="toshow" style="display:none">
-                    <li><a href="modular.jpeg" target="_blank">Notes</a></li>
+                    <li><a href="/23fal/modular.jpeg" target="_blank">Notes</a></li>
                     
         </div>
     </p>
