--- a/grad/index.html
+++ b/grad/index.html
@@ -171,7 +171,7 @@
 -->
 
 
-<h3><a id="23spr"></a>Talks in Spring 2023</h3>
+<h3><a id="23spr"></a>Talks in Spring 2023 (Tuesdays 4:20 in M5024)</h3>
 
     <p>
         Mar 7, '23, 
