--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -153,7 +153,7 @@
 
 <p>Oct 19, '23,     
     <b>Zian Zhao</b>, 
-        <i>Jacobians and Abelians and modularity</i>
+        <i>TBA</i>
     </p>
 
     
