--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -138,7 +138,7 @@
     </p>
 
 
-<h3><a id="T"></a>Talks (Thursdays 9–11 in M5024)</h3>
+<h3><a id="T"></a>Talks</h3>
 
 <p>Sep 29, '23,     
     <b>Yifan Wu</b>, 
