--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
     <p>
         Nov 9, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
         <b>Zhouli Xu</b> (University of California San Diego), 
-        <a onclick="toggle_visibility('23-6');"><i>TBA</i></a><br />
-        <div id="23-6" class="toshow" style="display:none">
+        <a onclick="toggle_visibility('23-7');"><i>TBA</i></a><br />
+        <div id="23-7" class="toshow" style="display:none">
             
         </div>
     </p>
@@ -169,9 +169,26 @@
     <p>
         Oct 19, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
         <b>Ruochuan Liu</b> (Peking University), 
-        <a onclick="toggle_visibility('23-5');"><i>TBA</i></a><br />
-        <div id="23-5" class="toshow" style="display:none">
+        <a onclick="toggle_visibility('23-6');"><i>TBA</i></a><br />
+        <div id="23-6" class="toshow" style="display:none">
             
+        </div>
+    </p>
+
+    <p>
+        Oct 12, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
+        <b>Don Zagier</b> (Max Planck Institute for Mathematics), 
+        <a onclick="toggle_visibility('23-5');"><i>Modular forms and quantum modular forms</i></a><br />
+        <div id="23-5" class="toshow" style="display:none">
+            Modular forms are one of the most beautiful and fundamental notions in modern number theory and 
+            play a role in almost every domain of pure mathematics and physics.  The famous specialist 
+            Martin Eichler once said, "There are five fundamental operations of mathematics: 
+            addition, subtraction, multiplication, division, and modular forms."  
+            In the first talk I will explain this notion and present some highlights of the theory and its applications.  
+            The last part, about the relatively new notion of "quantum modular forms" and its variants, is based on 
+            joint work with Stavros Garoufalidis (SUSTech) during the last several years in which 
+            many beautiful interconnections between number theory and 3-dimensional topology, and in particular the 
+            so-called quantum invariants of 3-dimensional topology, were found.
         </div>
     </p>
 
