--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -140,23 +140,41 @@
 
 <h3><a id="T"></a>Talks</h3>
 
-<p>Sep 29, '23,     
-    <b>Yifan Wu</b>, 
-        <a href="23fal/3_Review_of_Modular_Forms_and_Introduction_to_Modular_Curves_Yifan_Wu.pdf" target="_blank">
-                    <i>An overview of modular forms and modular curves</i></a>
+<!--
+    <p>
+        MMM DD, '23, 
+        <b>Speaker</b> (Affiliation), 
+        <a onclick="toggle_visibility('23-1');">
+            <i>Title</i>
+        </a>
+        <br />
+        <div id="23-1" class="toshow" style="display:none">
+            Abstract
+        </div>
+    </p>
+-->
+
+    <p>
+        Sep 29, '23, 
+        <b>Yifan Wu</b>, 
+        <a href="23fal/0929-Wu.pdf" target="_blank">
+            <i>An overview of modular forms and modular curves</i>
+        </a>
     </p>
 
-<p>Oct 12, '23,     
-    <b>Rongming Yin</b>, 
+    <p>
+        Oct 12, '23,     
+        <b>Rongming Yin</b>, 
         <i>An introduction to Jacobian varieties of algebraic curves</i>
     </p>
 
-<p>Oct 19, '23,     
-    <b>Zian Zhao</b>, 
+    <p>
+        Oct 19, '23,     
+        <b>Zian Zhao</b>, 
         <i>TBA</i>
     </p>
 
-    
+
 <h3><a id="P"></a>Previous Semesters</h3>
     <li><a href="23spr/syllabus.pdf" target="_blank">Spring 2023</a>, Knot theory and low-dimensional topology</li>
     <li><a href="22fal" target="_blank">Fall 2022</a>, Modular forms and their applications to geometry and topology</li>
