--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -165,7 +165,8 @@
     <p>
         Oct 12, '23,     
         <b>Rongming Yin</b>, 
-        <i>An introduction to Jacobian varieties of algebraic curves</i>
+        <a href="undergrad/23fal/Introduction to Jacobian varieties of algebraic curves.pdf" target="_blank">
+            <i>An introduction to Jacobian varieties of algebraic curves</i>
     </p>
 
     <p>
