--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -165,7 +165,7 @@
     <p>
         Oct 12, '23,     
         <b>Rongming Yin</b>, 
-        <a href="undergrad/23fal/Introduction to Jacobian varieties of algebraic curves.pdf" target="_blank">
+        <a href="23fal/1012-Yin.pdf" target="_blank">
             <i>An introduction to Jacobian varieties of algebraic curves</i>
     </p>
 
