--- a/grad/index.html
+++ b/grad/index.html
@@ -170,6 +170,12 @@
     </p>
 -->
 
+    <p>
+        Oct 17, '23, 
+        <b>Yifan Wu</b>, 
+        <i>Dyer Lashof theories and algebras</i>
+    </p>
+
 
 <h3><a id="23spr"></a>Talks in Spring 2023 (Tuesdays 4:20 in M5024)</h3>
 
