--- a/grad/index.html
+++ b/grad/index.html
@@ -171,7 +171,7 @@
 -->
     
     <p>
-        Oct 17, '23, 
+        Oct 17, '23 (4:20, M4009), 
         <b>Yifan Wu</b>, 
         <a onclick="toggle_visibility('10');">
         <i>Dyer Lashof theories and algebras</i></a><br />
