--- a/grad/index.html
+++ b/grad/index.html
@@ -155,7 +155,7 @@
     </p>
 
 
-<h3>Talks in Fall 2023</h3>
+<h3>Talks in Fall 2023 (Tuesdays 4:20)</h3>
 
 <!--
     <p>
@@ -171,7 +171,7 @@
 -->
     
     <p>
-        Oct 17, '23 (4:20, M4009), 
+        Oct 17, '23 (M4009), 
         <b>Yifan Wu</b>, 
         <a onclick="toggle_visibility('10');">
         <i>Dyer Lashof theories and algebras</i></a><br />
