--- a/index.html
+++ b/index.html
@@ -158,6 +158,24 @@
 -->
 
     <p>
+        Dec 28, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
+        <b>Neil Strickland</b> (University of Sheffield), 
+        <a onclick="toggle_visibility('23-9');"><i>TBA</i></a><br />
+        <div id="23-9" class="toshow" style="display:none">
+            
+        </div>
+    </p>
+
+    <p>
+        Dec 19, '23 (Tuesday, 4:20–5:10 pm), 
+        <b>Zhipeng Duan</b> (Nanjing Normal University), 
+        <a onclick="toggle_visibility('23-8');"><i>TBA</i></a><br />
+        <div id="23-8" class="toshow" style="display:none">
+            
+        </div>
+    </p>
+
+    <p>
         Nov 9, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
         <b>Zhouli Xu</b> (University of California San Diego), 
         <a onclick="toggle_visibility('23-7');"><i>TBA</i></a><br />
