--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
     <p>
         Nov 2, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
         <b>Ruochuan Liu</b> (Peking University), 
-        <a onclick="toggle_visibility('23-6');"><i>TBA</i></a><br />
+        <a onclick="toggle_visibility('23-6');"><i>Finiteness of irreducible components of the eigencurve</i></a><br />
         <div id="23-6" class="toshow" style="display:none">
-            
+            Coleman-Mazur constructed a rigid analytic curve known as the eigencurve to parametrize all finite slope overconvergent p-adic Hecke eigenforms with a given residual Galois representation. Although the eigencurve has played a significant role in recent advancements in algebraic number theory, its global geometry remains largely unexplored. In this talk, we will show that, when the associated local Galois representation is both reducible and generic, the eigencurve consists of only finitely many irreducible components. This result is part of a joint work with Nha Xuan Trong, Xiao Liang, and Zhao Bin, on the ghost conjecture of modular forms.
         </div>
     </p>
 
