--- a/index.html
+++ b/index.html
@@ -187,9 +187,17 @@
     <p>
         Nov 2, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
         <b>Ruochuan Liu</b> (Peking University), 
-        <a onclick="toggle_visibility('23-6');"><i>Finiteness of irreducible components of the eigencurve</i></a><br />
+        <a onclick="toggle_visibility('23-6');"><i>Congruences between modular forms and geometry of the eigencurve</i></a><br />
         <div id="23-6" class="toshow" style="display:none">
-            Coleman-Mazur constructed a rigid analytic curve known as the eigencurve to parametrize all finite slope overconvergent p-adic Hecke eigenforms with a given residual Galois representation. Although the eigencurve has played a significant role in recent advancements in algebraic number theory, its global geometry remains largely unexplored. In this talk, we will show that, when the associated local Galois representation is both reducible and generic, the eigencurve consists of only finitely many irreducible components. This result is part of a joint work with Nha Xuan Trong, Xiao Liang, and Zhao Bin, on the ghost conjecture of modular forms.
+            The study of congruences between modular forms is a classic and vital subject in number theory.  
+            Hida was the first to establish the theory of $p$-adic modular forms with slope zero; Hida theory 
+            is a core tool in Wiles' proof of the Iwasawa main conjecture, and also one of the main tools in 
+            proving Fermat's Last Theorem.  Coleman extended Hida's theory to $p$-adic modular forms of 
+            general finite slopes and, together with Mazur, constructed the eigencurve.  The geometry of the 
+            eigencurve is essential for understanding the congruence properties of modular forms, yet our 
+            knowledge about geometry of the eigencurve is very limited.  In a recent joint work with Nha Xuan 
+            Truong, Xiao Liang and Zhao Bin, we prove the finiteness of irreducible components of the 
+            eigencurve under a generic condition.
         </div>
     </p>
 
